Hero Image Edited

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="assets/images/Charge.png" alt="Problem 1">
                 <div class="Problem-Text">
                     <h3>Energy Demand</h3>
-                    <p>Escalating energy demand of electric car charging stations</p>
+                    <p>Escalating <span>energy demand</span> of electric car charging stations</p>
 
                 </div>
             </div>
