--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="Navbar">
         <div class="Logo">
-            <h1>SR</h1>
+            <h1>SRD</h1>
         </div>
         <nav>
             <ul>
@@ -39,8 +39,8 @@
             <img src="assets/images/About.jpg" alt="About Us">
         </div>
         <div class="AboutText">
-            <h2>About Us</h2>
-            <p>Welcome to <span>SRD Technologies!</span></p>
+            <h2>Who We Are</h2>
+            <p>Welcome to <span>SRD Energy Technologies!</span></p>
             <p>We specialize in the design and manufacturing of hydrogen-powered electric vehicle charging stations.
             </p>
             <p>Our comprehensive range caters to diverse needs, spanning residential, non-residential, and industrial
@@ -50,7 +50,7 @@
 
 
     <div class="Problems">
-        <h1>PROBLEMS</h1>
+        <h1>How We Help You</h1>
         <div class="Problem">
 
             <div class="Problem-Item">
@@ -76,7 +76,7 @@
                 <img src="assets/images/climate.png" alt="Problem 1">
 
                 <div class="Problem-Text">
-                    <h3>The Climate</h3>
+                    <h3>The Climate Change</h3>
                     <p>Impedes the widespread deployment of electric vehicles
                         <span>Environmental concerns</span> due to the reliance on non-renewable energy source
                     </p>
