--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>SRD Energy</title>
     <link rel="stylesheet" href="assets/css/SRD.css">
+    <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon">
 
 </head>
 
 <body>
+
 
     <div class="Navbar">
         <div class="Logo">
@@ -22,22 +24,66 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#About">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#Home" id="Home">Home</a></li>
+                <li><a href="#About" id="About">About</a></li>
+                <li><a href="contact.html" id="Contact">Contact</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Language</a>
+                    <div class="dropdown-content">
+                        <a href="#" onclick="setLanguage('en')">English</a>
+                        <a href="#" onclick="setLanguage('de')">Deutsch</a>
+                    </div>
+                </li>
             </ul>
         </nav>
+
+        <div class="SocialMedia">
+
+            <a href="https://www.linkedin.com/company/srd-energy/" target="_blank"><img src="assets/images/linkedin.png"
+                    alt="Linkedin"></a>
+            <a href="https://www.instagram.com/srdenergytechnologies/" target="_blank"><img
+                    src="assets/images/instagram.png" alt="Instagram"></a>
+        </div>
     </div>
+
+
+
 
     <header>
         <div class="Hero" id="Home"></div>
     </header>
 
 
+
+    <div class="Introduction">
+
+        <div class="Intoduction-Img">
+            <img src="assets/images/Yatch.png" alt="Charger">
+        </div>
+
+        <div class="Introduction-Text">
+            <h2><span>High Powered Ultra Fast Chargers</span> <br> for Electric Boats & Yachts</h2>
+            <p>SRD Energy Technologies is a leading provider of hydrogen-powered electric vehicle charging stations.
+                <br>
+                Our
+                comprehensive range caters to diverse needs, spanning residential, non-residential, and industrial <br>
+                applications
+                for passenger cars, trucks, buses, and industrial vehicles.
+            </p>
+        </div>
+
+    </div>
+
+
+
     <div class="About" id="About">
         <div class="AboutImg">
-            <img src="assets/images/About.jpg" alt="About Us">
+            <img src="assets/images/About.png" alt="About Us">
         </div>
+        <div class="AboutTextF">
+
+        </div>
+
         <div class="AboutText">
             <h2>Who We Are</h2>
             <p>Welcome to <span>SRD Energy Technologies!</span></p>
@@ -48,9 +94,48 @@
         </div>
     </div>
 
+    <h1 class="WhyHeading">Why Electric charging for Marina</h1>
+
+    <div class="Why">
+
+        <div class="WhyUsItem" id="EuPhoto">
+
+            <img src="assets/images/eyu.png" alt="">
+
+            <div class="WhyUsText">
+                <h2>The 60 KM Rule</h2>
+                <p> Fast-charging stations
+                    every 60 km by end 2025. </p>
+            </div>
+
+        </div>
+
+        <div class="WhyUsItem">
+            <img src="assets/images/bar.png" alt="">
+
+            <div class="WhyUsText">
+                <h2>asd</h2>
+                <p>asdasd</p>
+            </div>
+
+        </div>
+
+        <div class="WhyUsItem">
+            <img src="assets/images/3m.png" alt="">
+
+            <div class="WhyUsText">
+                <h2>asd</h2>
+                <p>asdasd</p>
+            </div>
+
+        </div>
+
+
+    </div>
+
 
     <div class="Problems">
-        <h1>How We Help You</h1>
+        <h1>Which Problems We Can Help </h1>
         <div class="Problem">
 
             <div class="Problem-Item">
@@ -97,6 +182,94 @@
 
         </div>
 
+
+
+        <div class="HowWeSolve">
+
+            <div class="HowWeSolve-Item">
+                <img src="assets/images/Charge.png" alt="Problem 1">
+                <div class="HowWeSolvetext">
+                    <h2>Consulting</h2>
+                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                        you provide.</p>
+                </div>
+            </div>
+
+            <div class="HowWeSolve-Item">
+                <img src="assets/images/Charge.png" alt="Problem 1">
+                <div class="HowWeSolvetext">
+                    <h2>Consulting</h2>
+                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                        you provide.</p>
+                </div>
+            </div>
+
+            <div class="HowWeSolve-Item">
+                <img src="assets/images/Charge.png" alt="Problem 1">
+                <div class="HowWeSolvetext">
+                    <h2>Consulting</h2>
+                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                        you provide.</p>
+                </div>
+            </div>
+
+            <div class="HowWeSolve-Item">
+                <img src="assets/images/Charge.png" alt="Problem 1">
+                <div class="HowWeSolvetext">
+                    <h2>Consulting</h2>
+                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                        you provide.</p>
+                </div>
+            </div>
+        </div>
+
+        <h1>Our Solution</h1>
+
+        <div class="OurSolition">
+            <img src="assets/images/About.png" alt="Image">
+            <div class="Solitions">
+
+                <div class="Solition-Item">
+                    <img src="" alt="Image">
+                    <div class="Solition-Text">
+                        <h3>Consulting</h3>
+                        <p>We prepare our product options that suit your purpose and needs in line with the brief and
+                            needs you provide.</p>
+                    </div>
+
+                </div>
+
+                <div class="Solition-Item">
+                    <img src="" alt="Image">
+                    <div class="Solition-Text">
+                        <h3>Consulting</h3>
+                        <p>We prepare our product options that suit your purpose and needs in line with the brief and
+                            needs you provide.</p>
+                    </div>
+
+                </div>
+
+
+                <div class="Solition-Item">
+                    <img src="" alt="Image">
+                    <div class="Solition-Text">
+                        <h3>Consulting</h3>
+                        <p>We prepare our product options that suit your purpose and needs in line with the brief and
+                            needs you provide.</p>
+                    </div>
+
+                </div>
+
+
+
+
+            </div>
+
+        </div>
+
+
+
+        <!-- How We Solve -->
 
     </div>
 
