--- a/index.html
+++ b/index.html
@@ -17,45 +17,31 @@
 
 <body>
 
-
-    <div class="Navbar">
+    <nav>
         <div class="Logo">
             <h1>SRD</h1>
         </div>
-        <nav>
+        <navbar>
             <ul>
                 <li><a href="#Home" id="Home">Home</a></li>
                 <li><a href="#About" id="About">About</a></li>
                 <li><a href="contact.html" id="Contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Language</a>
-                    <div class="dropdown-content">
-                        <a href="#" onclick="setLanguage('en')">English</a>
-                        <a href="#" onclick="setLanguage('de')">Deutsch</a>
-                    </div>
-                </li>
             </ul>
-        </nav>
-
+        </navbar>
+        <a href="#">Blog</a>
         <div class="SocialMedia">
-
             <a href="https://www.linkedin.com/company/srd-energy/" target="_blank"><img src="assets/images/linkedin.png"
                     alt="Linkedin"></a>
             <a href="https://www.instagram.com/srdenergytechnologies/" target="_blank"><img
                     src="assets/images/instagram.png" alt="Instagram"></a>
         </div>
-    </div>
-
-
-
+    </nav>
 
     <header>
         <div class="Hero" id="Home"></div>
     </header>
 
-
-
-    <div class="Introduction">
+    <section id="Introduction">
 
         <div class="Intoduction-Img">
             <img src="assets/images/Yatch.png" alt="Charger">
@@ -72,18 +58,16 @@
             </p>
         </div>
 
-    </div>
 
+    </section>
 
+    <section id="about">
 
-    <div class="About" id="About">
         <div class="AboutImg">
             <img src="assets/images/About.png" alt="About Us">
         </div>
         <div class="AboutTextF">
-
         </div>
-
         <div class="AboutText">
             <h2>Who We Are</h2>
             <p>Welcome to <span>SRD Energy Technologies!</span></p>
@@ -92,184 +76,260 @@
             <p>Our comprehensive range caters to diverse needs, spanning residential, non-residential, and industrial
                 applications for passenger <span>cars, trucks, buses, and industrial vehicles.</span></p>
         </div>
-    </div>
+    </section>
 
     <h1 class="WhyHeading">Why Electric charging for Marina</h1>
 
-    <div class="Why">
-
+    <section id="why">
         <div class="WhyUsItem" id="EuPhoto">
-
             <img src="assets/images/eyu.png" alt="">
-
             <div class="WhyUsText">
                 <h2>The 60 KM Rule</h2>
                 <p> Fast-charging stations
                     every 60 km by end 2025. </p>
             </div>
-
         </div>
-
         <div class="WhyUsItem">
             <img src="assets/images/bar.png" alt="">
-
             <div class="WhyUsText">
                 <h2>asd</h2>
                 <p>asdasd</p>
             </div>
-
         </div>
-
         <div class="WhyUsItem">
             <img src="assets/images/3m.png" alt="">
-
             <div class="WhyUsText">
                 <h2>asd</h2>
                 <p>asdasd</p>
             </div>
-
         </div>
+    </section>
 
-
-    </div>
-
-
-    <div class="Problems">
+    <section id="problems">
         <h1>Which Problems We Can Help </h1>
         <div class="Problem">
-
             <div class="Problem-Item">
                 <img src="assets/images/Charge.png" alt="Problem 1">
                 <div class="Problem-Text">
                     <h3>Energy Demand</h3>
                     <p>Escalating <span>energy demand</span> of electric car charging stations</p>
-
                 </div>
             </div>
-
             <div class="Problem-Item">
                 <img src="assets/images/Electric.png" alt="Problem 1">
                 <div class="Problem-Text">
                     <h3>Insufficent Power Grids</h3>
                     <p>Conventional charging infrastructure strains existing power grids, leading to <span>overburdened
                             systems and potential shortages</span></p>
-
                 </div>
             </div>
-
             <div class="Problem-Item">
                 <img src="assets/images/climate.png" alt="Problem 1">
-
                 <div class="Problem-Text">
                     <h3>The Climate Change</h3>
                     <p>Impedes the widespread deployment of electric vehicles
                         <span>Environmental concerns</span> due to the reliance on non-renewable energy source
                     </p>
                 </div>
-
             </div>
-
             <div class="Problem-Item">
                 <img src="assets/images/ChargeDemand.png" alt="Problem 1">
-
                 <div class="Problem-Text">
                     <h3>Rapid Charge Demand</h3>
                     <p>The EV Rapid Charger provide longer travel distances without long wait recharge brakes. You can
                         recharge your vehicle in around 20 minutes (only limited by the vehicle charge capability)</p>
                 </div>
             </div>
+        </div>
+    </section>
 
+
+    <section id="hoWeSolve">
+        <div class="HowWeSolve-Item">
+            <img src="assets/images/Charge.png" alt="Problem 1">
+            <div class="HowWeSolvetext">
+                <h2>Consulting</h2>
+                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                    you provide.</p>
+            </div>
+        </div>
+        <div class="HowWeSolve-Item">
+            <img src="assets/images/Charge.png" alt="Problem 1">
+            <div class="HowWeSolvetext">
+                <h2>Feasibility </h2>
+                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                    you provide.</p>
+            </div>
+        </div>
+        <div class="HowWeSolve-Item">
+            <img src="assets/images/Charge.png" alt="Problem 1">
+            <div class="HowWeSolvetext">
+                <h2>Project engineering</h2>
+                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                    you provide.</p>
+            </div>
+        </div>
+        <div class="HowWeSolve-Item">
+            <img src="assets/images/Charge.png" alt="Problem 1">
+            <div class="HowWeSolvetext">
+                <h2>Infrastructure</h2>
+                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
+                    you provide.</p>
+            </div>
+        </div>
+    </section>
+
+    <h1>Our Solution</h1>
+
+    <section id="ourSolition">
+        <img src="assets/images/About.png" alt="Image">
+        <div class="Solitions">
+            <div class="Solitions-Item">
+                <img src="assets/images/grid.png" alt="Image">
+                <div class="Solition-Text">
+                    <h3>Consulting</h3>
+                    <p>Embody energy and <br> independence, anywhere, <br> anytime.</p>
+                </div>
+            </div>
+            <div class="Solitions-Item">
+                <img src="assets/images/modular.png" alt="Image">
+                <div class="Solition-Text">
+                    <h3>Consulting</h3>
+                    <p>Enhance your energy <br> infrastructure by utilizing <br> modular design.</p>
+                </div>
+            </div>
+            <div class="Solition-Item">
+                <img src="assets/images/chargeicon.png" alt="Image">
+                <div class="Solition-Text">
+                    <h3>Consulting</h3>
+                    <p>Charge your vehicle in less than 15 minutes</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <h1>Why Charging Stations</h1>
+
+    <section id="whyCharging">
+        <div class="WhyCharging-Item">
+            <div class="WhyCharging-Img">
+                <img src="assets/images/fastcharging.png" alt="Problem 1">
+            </div>
+            <div class="WhyCharging-Text">
+                <h3>High-Speed Charging:</h3>
+                <p> DC fast charging at rates of 185 or 250 kW</p>
+            </div>
+        </div>
+        <div class="WhyCharging-Item">
+            <div class="WhyCharging-Img">
+                <img src="assets/images/reliable.png" alt="Problem 1">
+            </div>
+            <div class="WhyCharging-Text">
+                <h3>Reliable Power Assurance:</h3>
+                <p> 100% reliable with guaranteed power output</p>
+            </div>
+        </div>
+        <div class="WhyCharging-Item">
+            <div class="WhyCharging-Img">
+                <img src="assets/images/off-grid.png" alt="Problem 1">
+            </div>
+            <div class="WhyCharging-Text">
+                <h3>Grid Independence:</h3>
+                <p> No reliance on grid connections or costly upgrades</p>
+            </div>
+        </div>
+        <div class="WhyCharging-Item">
+            <div class="WhyCharging-Img">
+                <img src="assets/images/eco.png" alt="Problem 1">
+            </div>
+            <div class="WhyCharging-Text">
+                <h3>Eco-Friendly Operation:</h3>
+                <p> CO2-free operation with green hydrogen</p>
+            </div>
+        </div>
+        <div class="WhyCharging-Item">
+            <div class="WhyCharging-Img">
+                <img src="assets/images/easy.png" alt="Problem 1">
+            </div>
+            <div class="WhyCharging-Text">
+                <h3>Easy Maintenance</h3>
+                <p> Minimal maintenance requirements</p>
+            </div>
+        </div>
+        <div class="WhyCharging-Item">
+            <div class="WhyCharging-Img">
+                <img src="assets/images/modularity.png" alt="Problem 1">
+            </div>
+            <div class="WhyCharging-Text">
+                <h3>Compact, Modular Design</h3>
+                <p>Easy to install and expand with a modular design</p>
+            </div>
+        </div>
+        <div class="WhyCharging-Item LastItem">
+            <div class="WhyCharging-Img">
+                <img src="assets/images/affordable.png" alt="Problem 1">
+            </div>
+            <div class="WhyCharging-Text">
+                <h3>Affordable price</h3>
+                <p>Cost-effective solution for all types of applications</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="customerBase">
+
+        <h1>Our Customer Base</h1>
+        <div class="CustomerBase">
+
+            <div class="CustomerBase-Item">
+                <img src="assets/images/Car.png" alt="Problem 1">
+                <div class="CustomerBase-Text">
+                    <h3>Passenger Cars</h3>
+                    <p>Our charging stations are ideal for passenger cars, providing fast and reliable charging.</p>
+                </div>
+            </div>
+
+            <div class="CustomerBase-Item">
+                <img src="assets/images/Truck.png" alt="Problem 1">
+                <div class="CustomerBase-Text">
+                    <h3>Trucks</h3>
+                    <p>Our charging stations are ideal for trucks, providing fast and reliable charging.</p>
+                </div>
+            </div>
+
+            <div class="CustomerBase-Item">
+                <img src="assets/images/Bus.png" alt="Problem 1">
+                <div class="CustomerBase-Text">
+                    <h3>Buses</h3>
+                    <p>Our charging stations are ideal for buses, providing fast and reliable charging.</p>
+                </div>
+            </div>
+
+            <div class="CustomerBase-Item">
+                <img src="assets/images/Industrial.png" alt="Problem 1">
+                <div class="CustomerBase-Text">
+                    <h3>Industrial Vehicles</h3>
+                    <p>Our charging stations are ideal for industrial vehicles, providing fast and reliable charging.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="CustomerBase-Item">
+                <img src="assets/images/Industrial.png" alt="Problem 1">
+                <div class="CustomerBase-Text">
+                    <h3>Industrial Vehicles</h3>
+                    <p>Our charging stations are ideal for industrial vehicles, providing fast and reliable charging.
+                    </p>
+                </div>
+            </div>
 
         </div>
 
-
-
-        <div class="HowWeSolve">
-
-            <div class="HowWeSolve-Item">
-                <img src="assets/images/Charge.png" alt="Problem 1">
-                <div class="HowWeSolvetext">
-                    <h2>Consulting</h2>
-                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                        you provide.</p>
-                </div>
-            </div>
-
-            <div class="HowWeSolve-Item">
-                <img src="assets/images/Charge.png" alt="Problem 1">
-                <div class="HowWeSolvetext">
-                    <h2>Consulting</h2>
-                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                        you provide.</p>
-                </div>
-            </div>
-
-            <div class="HowWeSolve-Item">
-                <img src="assets/images/Charge.png" alt="Problem 1">
-                <div class="HowWeSolvetext">
-                    <h2>Consulting</h2>
-                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                        you provide.</p>
-                </div>
-            </div>
-
-            <div class="HowWeSolve-Item">
-                <img src="assets/images/Charge.png" alt="Problem 1">
-                <div class="HowWeSolvetext">
-                    <h2>Consulting</h2>
-                    <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                        you provide.</p>
-                </div>
-            </div>
-        </div>
-
-        <h1>Our Solution</h1>
-
-        <div class="OurSolition">
-            <img src="assets/images/About.png" alt="Image">
-            <div class="Solitions">
-
-                <div class="Solition-Item">
-                    <img src="" alt="Image">
-                    <div class="Solition-Text">
-                        <h3>Consulting</h3>
-                        <p>We prepare our product options that suit your purpose and needs in line with the brief and
-                            needs you provide.</p>
-                    </div>
-
-                </div>
-
-                <div class="Solition-Item">
-                    <img src="" alt="Image">
-                    <div class="Solition-Text">
-                        <h3>Consulting</h3>
-                        <p>We prepare our product options that suit your purpose and needs in line with the brief and
-                            needs you provide.</p>
-                    </div>
-
-                </div>
-
-
-                <div class="Solition-Item">
-                    <img src="" alt="Image">
-                    <div class="Solition-Text">
-                        <h3>Consulting</h3>
-                        <p>We prepare our product options that suit your purpose and needs in line with the brief and
-                            needs you provide.</p>
-                    </div>
-
-                </div>
+    </section>
 
 
 
-
-            </div>
-
-        </div>
-
-
-
-        <!-- How We Solve -->
+    <!-- How We Solve -->
 
     </div>
 
