--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>SRD Energy</title>
     <link rel="stylesheet" href="assets/css/SRD.css">
@@ -276,58 +279,97 @@
         </div>
     </section>
 
-    <section id="customerBase">
+    <h1>Our Customer Base</h1>
 
-        <h1>Our Customer Base</h1>
-        <div class="CustomerBase">
-
-            <div class="CustomerBase-Item">
-                <img src="assets/images/Car.png" alt="Problem 1">
-                <div class="CustomerBase-Text">
-                    <h3>Passenger Cars</h3>
-                    <p>Our charging stations are ideal for passenger cars, providing fast and reliable charging.</p>
+    <section class="carousel-section">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <!-- İlk slide -->
+                <div class="carousel-item active" data-bs-interval="10000">,
+                    <h5>Seaport</h5>
+                    <img src="assets/images/seaport.jpg" class="d-block custom-carousel-img" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <!-- İkinci slide -->
+                <div class="carousel-item" data-bs-interval="2000">
+                    <h5>Harbour</h5>
+                    <img src="assets/images/harbour.jpg" class="d-block custom-carousel-img" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <!-- Üçüncü slide -->
+                <div class="carousel-item">
+                    <h5>Boat Park</h5>
+                    <img src="assets/images/boatpark.jpg" class="d-block custom-carousel-img" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <!-- Dördüncü Slide -->
+                <div class="carousel-item">
+                    <h5>Inland Port</h5>
+                    <img src="assets/images/inlandport.jpg" class="d-block custom-carousel-img" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <!-- Beşinci Slide -->
+                <div class="carousel-item">
+                    <h5>River Port</h5>
+                    <img src="assets/images/riverport.jpg" class="d-block custom-carousel-img" alt="Fifth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
                 </div>
             </div>
-
-            <div class="CustomerBase-Item">
-                <img src="assets/images/Truck.png" alt="Problem 1">
-                <div class="CustomerBase-Text">
-                    <h3>Trucks</h3>
-                    <p>Our charging stations are ideal for trucks, providing fast and reliable charging.</p>
-                </div>
-            </div>
-
-            <div class="CustomerBase-Item">
-                <img src="assets/images/Bus.png" alt="Problem 1">
-                <div class="CustomerBase-Text">
-                    <h3>Buses</h3>
-                    <p>Our charging stations are ideal for buses, providing fast and reliable charging.</p>
-                </div>
-            </div>
-
-            <div class="CustomerBase-Item">
-                <img src="assets/images/Industrial.png" alt="Problem 1">
-                <div class="CustomerBase-Text">
-                    <h3>Industrial Vehicles</h3>
-                    <p>Our charging stations are ideal for industrial vehicles, providing fast and reliable charging.
-                    </p>
-                </div>
-            </div>
-            
-            <div class="CustomerBase-Item">
-                <img src="assets/images/Industrial.png" alt="Problem 1">
-                <div class="CustomerBase-Text">
-                    <h3>Industrial Vehicles</h3>
-                    <p>Our charging stations are ideal for industrial vehicles, providing fast and reliable charging.
-                    </p>
-                </div>
-            </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-
     </section>
 
 
+
+    <section id="sliderCompanySection">
+
+        <h1>Our Partners</h1>
+
+        <div class="slider">
+            <div class="slide-track">
+                <div class="slide">
+                    <img src="assets/images/company1.png" height="100" width="250" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="assets/images/company2.png" height="100" width="250" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="assets/images/company3.png" height="100" width="250" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="assets/images/company4.png" height="100" width="250" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="assets/images/company1.png" height="100" width="250" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="assets/images/company2.png" height="100" width="250" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="assets/images/company3.png" height="100" width="250" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="assets/images/company4.png" height="100" width="250" alt="" />
+                </div>
+
+            </div>
+        </div>
+
+    </section>
 
     <!-- How We Solve -->
 
