--- a/index.html
+++ b/index.html
@@ -342,28 +342,51 @@
         <div class="slider">
             <div class="slide-track">
                 <div class="slide">
-                    <img src="assets/images/company1.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company1.png"  />
                 </div>
+
                 <div class="slide">
-                    <img src="assets/images/company2.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company2.png"  />
                 </div>
+
                 <div class="slide">
-                    <img src="assets/images/company3.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company3.png"  />
                 </div>
+
                 <div class="slide">
-                    <img src="assets/images/company4.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company4.png"  />
                 </div>
+
                 <div class="slide">
-                    <img src="assets/images/company1.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company1.png"  />
                 </div>
+
                 <div class="slide">
-                    <img src="assets/images/company2.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company2.png"  />
                 </div>
+
                 <div class="slide">
-                    <img src="assets/images/company3.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company3.png"  />
                 </div>
+
                 <div class="slide">
-                    <img src="assets/images/company4.png" height="100" width="250" alt="" />
+                    <img src="assets/images/company4.png"  />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company1.png"  />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company2.png"  />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company3.png"  />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company4.png"  />
                 </div>
 
             </div>
