--- a/index.html
+++ b/index.html
@@ -388,6 +388,22 @@
                 <div class="slide">
                     <img src="assets/images/company4.png"  />
                 </div>
+                
+                <div class="slide">
+                    <img src="assets/images/company1.png"  />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company2.png"  />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company3.png"  />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company4.png"  />
+                </div>
 
             </div>
         </div>
