--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
         </navbar>
         <a href="#">Blog</a>
         <div class="SocialMedia">
-            <a href="https://www.linkedin.com/company/srd-energy/" target="_blank"><img src="assets/images/linkedin.png"
-                    alt="Linkedin"></a>
-            <a href="https://www.instagram.com/srdenergytechnologies/" target="_blank"><img
-                    src="assets/images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/company/srd-energy/" target="_blank"><img src="assets/images/linkedin.svg"
+                    width="30px" alt="Linkedin"></a>
+
         </div>
     </nav>
 
@@ -342,67 +341,67 @@
         <div class="slider">
             <div class="slide-track">
                 <div class="slide">
-                    <img src="assets/images/company1.png"  />
+                    <img src="assets/images/company1.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company2.png"  />
+                    <img src="assets/images/company2.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company3.png"  />
+                    <img src="assets/images/company3.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company4.png"  />
+                    <img src="assets/images/company4.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company1.png"  />
+                    <img src="assets/images/company1.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company2.png"  />
+                    <img src="assets/images/company2.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company3.png"  />
+                    <img src="assets/images/company3.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company4.png"  />
+                    <img src="assets/images/company4.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company1.png"  />
+                    <img src="assets/images/company1.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company2.png"  />
+                    <img src="assets/images/company2.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company3.png"  />
+                    <img src="assets/images/company3.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company4.png"  />
-                </div>
-                
-                <div class="slide">
-                    <img src="assets/images/company1.png"  />
+                    <img src="assets/images/company4.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company2.png"  />
+                    <img src="assets/images/company1.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company3.png"  />
+                    <img src="assets/images/company2.png" />
                 </div>
 
                 <div class="slide">
-                    <img src="assets/images/company4.png"  />
+                    <img src="assets/images/company3.png" />
+                </div>
+
+                <div class="slide">
+                    <img src="assets/images/company4.png" />
                 </div>
 
             </div>
