Our Team And Milestones Added

--- a/index.html
+++ b/index.html
@@ -332,8 +332,6 @@
         </div>
     </section>
 
-
-
     <section id="sliderCompanySection">
 
         <h1>Our Partners</h1>
@@ -409,9 +407,109 @@
 
     </section>
 
-    <!-- How We Solve -->
+    <section id="sdgGoals">
 
-    </div>
+        <div class="Sdg-Item1">
+            <div class="Sdg-Item">
+                <img src="assets/images/yellow.png" alt="">
+                <div class="Sdg-Text">
+                    <p>Low Cost hydrogen generator and
+                        fuel cells for SMES</p>
+                </div>
+            </div>
+
+            <div class="Sdg-Item">
+                <img src="assets/images/red.png" alt="">
+                <div class="Sdg-Text">
+                    <p>Helps local SMEst transition to
+                        Green energy systems</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="Sdg-Item2">
+
+            <div class="Sdg-Item">
+                <img src="assets/images/green.png" alt="">
+                <div class="Sdg-Text">
+                    <p>Support UNFCCC-certiified climate friendly projects</p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <h1>Our Team</h1>
+    <section id="ourTeam">
+        <div class="Team">
+
+            <div class="Team-Item">
+                <img src="assets/images/avatar1.png" alt="Team Member">
+                <h3>Andy DEMIR</h3>
+                <p>Co-Founder & Sales</p>
+
+            </div>
+
+            <div class="Team-Item">
+                <img src="assets/images/avatar2.png" alt="Team Member">
+                <h3>Jane Doe</h3>
+                <p>CTO</p>
+            </div>
+
+            <div class="Team-Item">
+                <img src="assets/images/avatar3.png" alt="Team Member">
+                <h3>Serdar TEMIZ</h3>
+                <p>Inniovation & Tech</p>
+            </div>
+
+            <div class="Team-Item">
+                <img src="assets/images/avatar4.png" alt="Team Member">
+                <h3>Ömer Faruk GOKCE</h3>
+                <p>HW Engineer</p>
+            </div>
+
+            <div class="Team-Item">
+                <img src="assets/images/avatar5.png" alt="Team Member">
+                <h3> Berk UCAR</h3>
+                <p>Frontend Developer</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="milestones">
+        <h1>Milestones</h1>
+<ul>
+    <li style="--accent-color:#41516C">
+        <div class="date">2002</div>
+        <div class="title">Title 1</div>
+        <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
+    </li>
+    <li style="--accent-color:#FBCA3E">
+        <div class="date">2007</div>
+        <div class="title">Title 2</div>
+        <div class="descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci nobis nostrum vero nihil veniam.</div>
+    </li>
+    <li style="--accent-color:#E24A68">
+        <div class="date">2012</div>
+        <div class="title">Title 3</div>
+        <div class="descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima consequuntur soluta placeat iure totam commodi repellendus ea delectus, libero fugit quod reprehenderit, sequi quo, et dolorum saepe nulla hic.</div>
+    </li>
+    <li style="--accent-color:#1B5F8C">
+        <div class="date">2017</div>
+        <div class="title">Title 4</div>
+        <div class="descr">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, cumque.</div>
+    </li>
+    <li style="--accent-color:#4CADAD">
+        <div class="date">2022</div>
+        <div class="title">Title 5</div>
+        <div class="descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non.</div>
+    </li>
+</ul>
+<div class="credits"><a target="_blank" href="https://www.freepik.com/free-vector/infographic-template-with-yearly-info_1252895.htm">inspired by</a></div>
+
+    </section>
 
 </body>
 
