--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <h1>SRD</h1>
         </div>
         <navbar>
-            <ul>
+            <ol>
                 <li><a href="#Home" id="Home">Home</a></li>
                 <li><a href="#About" id="About">About</a></li>
                 <li><a href="contact.html" id="Contact">Contact</a></li>
-            </ul>
+            </ol>
         </navbar>
         <a href="#">Blog</a>
         <div class="SocialMedia">
@@ -441,6 +441,7 @@
     </section>
 
     <h1>Our Team</h1>
+
     <section id="ourTeam">
         <div class="Team">
 
@@ -474,42 +475,71 @@
                 <h3> Berk UCAR</h3>
                 <p>Frontend Developer</p>
             </div>
+
+            <div class="Team-Item">
+                <img src="assets/images/avatar5.png" alt="Team Member">
+                <h3> Berk UCAR</h3>
+                <p>Frontend Developer</p>
+            </div>
+
         </div>
-
     </section>
 
-    <section id="milestones">
+    <section id="milestones" class="Milestones">
         <h1>Milestones</h1>
-<ul>
-    <li style="--accent-color:#41516C">
-        <div class="date">2002</div>
-        <div class="title">Title 1</div>
-        <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
-    </li>
-    <li style="--accent-color:#FBCA3E">
-        <div class="date">2007</div>
-        <div class="title">Title 2</div>
-        <div class="descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci nobis nostrum vero nihil veniam.</div>
-    </li>
-    <li style="--accent-color:#E24A68">
-        <div class="date">2012</div>
-        <div class="title">Title 3</div>
-        <div class="descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima consequuntur soluta placeat iure totam commodi repellendus ea delectus, libero fugit quod reprehenderit, sequi quo, et dolorum saepe nulla hic.</div>
-    </li>
-    <li style="--accent-color:#1B5F8C">
-        <div class="date">2017</div>
-        <div class="title">Title 4</div>
-        <div class="descr">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, cumque.</div>
-    </li>
-    <li style="--accent-color:#4CADAD">
-        <div class="date">2022</div>
-        <div class="title">Title 5</div>
-        <div class="descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non.</div>
-    </li>
-</ul>
-<div class="credits"><a target="_blank" href="https://www.freepik.com/free-vector/infographic-template-with-yearly-info_1252895.htm">inspired by</a></div>
+        <ul>
+            <li style="--accent-color:#41516C">
+                <div class="date">2002</div>
+                <div class="title">Title 1</div>
+                <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam
+                    fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
+            </li>
+            <li style="--accent-color:#FBCA3E">
+                <div class="date">2007</div>
+                <div class="title">Title 2</div>
+                <div class="descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci nobis nostrum
+                    vero nihil veniam.</div>
+            </li>
+            <li style="--accent-color:#E24A68">
+                <div class="date">2012</div>
+                <div class="title">Title 3</div>
+                <div class="descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima consequuntur
+                    soluta placeat iure totam commodi repellendus ea delectus, libero fugit quod reprehenderit, sequi
+                    quo, et dolorum saepe nulla hic.</div>
+            </li>
+            <li style="--accent-color:#1B5F8C">
+                <div class="date">2017</div>
+                <div class="title">Title 4</div>
+                <div class="descr">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, cumque.</div>
+            </li>
+            <li style="--accent-color:#4CADAD">
+                <div class="date">2022</div>
+                <div class="title">Title 5</div>
+                <div class="descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non.</div>
+            </li>
+        </ul>
+
 
     </section>
+
+    <footer>
+        <div class="footer">
+            <div class="footer-Item">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-Item">
+                <h3>Contact</h3>
+                <p>SRD Energy Technologies
+                    <br> 1234 Street Name, City Name
+                    <br> Country Name
+                    <br> +123 456 7890
+                    <br>
+    </footer>
 
 </body>
 
