--- a/index.html
+++ b/index.html
@@ -971,8 +971,9 @@
     </section>
 
     <footer>
-        <div class="Footer">
-            <div class="footer-item">
+        <div class="footerContainer">
+
+            <div class="footer-Item">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -980,19 +981,28 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <div class="footer-item">
+
+            <div class="footer-Item2">
                 <h3>Contact</h3>
                 <p>SRD Energy Technologies
                     <br> Germany
                     <br>
                     +49 157 513 025 41
                     <br>
-                    <a href="mailto:info@srdenergy.com">info@srdenergy.com</a> <!-- Mailto link -->
+                    <a href="mailto:info@srdenergy.com">info@srdenergy.com</a>
                 </p>
             </div>
+
+        </div>
+
+        <div class="copyRight">
+            <p>© 2021 SRD Energy Technologies. All Rights Reserved.</p>
+        </div>
+
         </div>
     </footer>
-    
+
+
 
     <button id="scrollToTop" class="scroll-to-top">↑</button>
 
